Bug 975787 - With cache disabled, assertion fails in nsWyciwygChannel::WriteToCacheEntry, r=michal