netwerk/protocol/wyciwyg/nsWyciwygChannel.cpp
@@ -466,10 +466,8 @@ nsWyciwygChannel::WriteToCacheEntry(const nsAString &aData)
   mMode = WRITING;
 
   if (mozilla::net::CacheObserver::UseNewCache()) {
-    mozilla::DebugOnly<nsresult> rv = EnsureWriteCacheEntry();
-    // If this fails in release, that is not much of a deal. We try
-    // it once again on the IO thread.
-    MOZ_ASSERT(NS_SUCCEEDED(rv));
+    nsresult rv = EnsureWriteCacheEntry();
+    if (NS_FAILED(rv)) return rv;
   }
 
   return mCacheIOTarget->Dispatch(new nsWyciwygWriteEvent(this, aData),
